modules/lgr/main/default/objects/lgr_LogEvent__e/lgr_LogEvent__e.object-meta.xml
<CustomObject>
    <description>This maps to a lgr_Log__c record from a Platform-Event Triggered Flow. Useful when catching an error in Apex, logging the error by immediately publishing this event, and then re-throwing the error.</description>
    <label>Custom Log Event</label>
    <pluralLabel>Custom Log Events</pluralLabel>
</CustomObject>