modules/lgr/main/default/objects/lgr_LogEvent__e/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>=&gt; lgr_Log__c.Class__c</description>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>