modules/lgr/main/default/objects/lgr_LogEvent__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <defaultValue>&apos;DEBUG&apos;</defaultValue>
    <description>=&gt; lgr_Log__c.Level__c</description>
    <label>Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>