modules/lgr/main/default/objects/lgr_LogEvent__e/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>=&gt; lgr_Log__c.Method__c</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>