modules/lgr/main/default/objects/lgr_LogEvent__e/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>=&gt; lgr_Log__c.Parameters__c</description>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>